k8s/bases/infrastructure/controllers/kube-prometheus-stack/http-route-grafana.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Grafana
    gethomepage.dev/description: Metrics dashboards and log exploration.
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: grafana.png
spec:
  parentRefs:
    - name: platform
      namespace: kube-system
      sectionName: https
  hostnames:
    - grafana.${domain}
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=63072000; includeSubDomains; preload
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
