k8s/bases/infrastructure/controllers/kube-prometheus-stack/http-route-prometheus.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Prometheus
    gethomepage.dev/description: Metrics, targets and alert rules.
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: prometheus.png
spec:
  parentRefs:
    - name: platform
      namespace: kube-system
      sectionName: https
  hostnames:
    - prometheus.${domain}
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=63072000; includeSubDomains; preload
      backendRefs:
        - name: oauth2-proxy
          namespace: oauth2-proxy
          port: 80
